Host/Aws/Yaml/waste-ingress-webui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waste-ingress-webui
  namespace: waste-system
  uid: 8ffa7738-fcec-47af-81d6-3368e3f08f4a
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"managedFields":[{"apiVersion":"networking.k8s.io/v1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/last-applied-configuration":{},"f:nginx.ingress.kubernetes.io/rewrite-target":{}}},"f:spec":{"f:rules":{}}},"manager":"kubectl-client-side-apply","operation":"Update"},{"apiVersion":"networking.k8s.io/v1beta1","fieldsType":"FieldsV1","fieldsV1":{"f:status":{ [...]
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
            'f:nginx.ingress.kubernetes.io/rewrite-target': {}
        'f:spec':
          'f:rules': {}
    - manager: nginx-ingress-controller
      operation: Update
      apiVersion: networking.k8s.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:loadBalancer':
            'f:ingress': {}
  selfLink: >-
    /apis/networking.k8s.io/v1/namespaces/waste-system/ingresses/waste-ingress-webui
status:
  loadBalancer:
    ingress:
      - hostname: >-
          a0c425e8530f843f196d68c0b1027d57-1645105463.eu-central-1.elb.amazonaws.com
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: waste-webui-cluster-ip
                port:
                  number: 80
            path: /js(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: waste-webui-cluster-ip
                port:
                  number: 80
            path: /css(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: waste-webui-cluster-ip
                port:
                  number: 80
            path: /img(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: waste-webui-cluster-ip
                port:
                  number: 80
            path: /(/|$)(.*)
            pathType: Prefix
